# gmpxxyy

./: .gitignore  AUTHORS  ChangeLog  README.md  configure.ac  environment.yml  rever.xsh
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml
.ci_support/: linux_build_flavour.yaml  linux_build_flavourpython2.7.yaml  linux_build_flavourpython3.6.yaml  linux_build_flavourpython3.7.yaml  linux_build_flavourstyle.yaml  linux_build_flavourstylepython2.7.yaml  linux_build_flavourstylepython3.6.yaml  linux_build_flavourstylepython3.7.yaml  linux_release.yaml  linux_style.yaml  linux_test36.yaml  linux_test37.yaml  osx_build_flavour.yaml  osx_build_flavourpython2.7.yaml  osx_build_flavourpython3.6.yaml  osx_build_flavourpython3.7.yaml  osx_build_flavourstyle.yaml
.github/workflows/: test.yml
binder/: Sample.gmpxxyy.ipynb  environment.yml
doc/binder/: environment.yml
doc/news/: conda-forge.rst  cppyy.rst
recipe/: build.sh  conda_build_config.yaml  environment.sh  meta.yaml
src/: Makefile.am  setup.py.in
src/gmpxxyy/: __init__.py  cppyy_gmpxx.py  sage.py
test/: Makefile.am  python-doctest.sh.in  sage-doctest.sh.in  test-env.sh.in
